# voice-repeater

./: .gitignore  LICENSE  README.md  README.zh-CN.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro  release.keystore
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  soundtouch_jni.cpp
app/src/main/java/com/example/silero/: Components.kt  MainActivity.kt  MainViewModel.kt  Screens.kt
app/src/main/java/com/example/silero/audio/: AudioPlayer.kt  RepeatEngine.kt  SileroVad.kt  SoundTouch.kt  VoiceChanger.kt  VoiceParams.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
